Create chat websocket, fix create message websocket, TODO REFACTOR
